--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,431 @@
+@import "font-face.less";
 @import "variables.less";
 @import "mixin.less";
 @import "grid.less";
 @import "elements.less";
-
 // Все стили здесь
+* {
+    margin: 0px;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Segoe UI';
+    font-size: 23px;
+    line-height: 27px;
+    font-weight: 400;
+}
+.clearfix:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+.fl-l {
+    float: left;
+}
+.fl-r {
+    float: right;
+}
+.col-3 {
+    width: 33.33%;
+}
+.col-7 {
+    width: 14.28%;
+}
+.wrapper {
+    width: 1200px;
+    margin: 0 auto;
+    box-shadow: 0 0 62px rgba(0, 0, 0, 0.42);
+    text-align: center;
+    color: black;
+}
+.btn {
+    display: inline-block;
+    width: 298px;
+    height: 63px;
+    background-color: #0b8881;
+    color: #fafafa;
+   font-family: 'PT Sans', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+    line-height: 63px;
+    &:hover {
+        background-color: #0a5d58;
+    }
+}
+.pravotest {
+    h1 {
+        color: #2f2f2f;
+        font-size: 37px;
+        line-height: 35px;
+        font-weight: 700;
+    }
+    h2 {
+        font-size: 39px;
+        line-height: 43px;
+        font-weight: 700;
+        padding-bottom: 50px;
+    }
+    h3 {
+        color: #4d4d4d;
+        font-size: 22px;
+        line-height: 26px;
+        font-weight: 700;
+    }
+}
+header {
+    background-color: #ededed;
+    padding: 55px 38px 5px 38px;
+    .top {
+        .logo {
+            width: 40%;
+    
+            text-decoration: none;
+            img {}
+            &--name {
+color: #2f2f2f;
+font-size: 51px;
+line-height: 55px;
+padding-bottom: 4px;
+margin-left: 127px;
+text-align: left;
+            }
+            &--desc {
+            color: white;
+font-size: 22px;
+line-height: 31px;
+background-color: #0b8881;
+            width: 267px;
+            margin-left: 130px;
+            }
+        }
+        .phone {
+            float: left;
+            color: #42927e;
+font-size: 30px;
+font-weight: 700;
+            width: 40%;
+            padding-left: 30px;
+            padding-top: 22px;
+            background-image: url(../img/green-phone.png);
+            background-repeat: no-repeat;
+            background-position: 51px 12px;
+            min-height: 80px;
+        }
+        .right-side {
+            float: right;
+            padding-right: 23px;
+            
+            .city {
+                color: #2f2f2f;
+                font-size: 24px;
+                line-height: 28px;
+                font-weight: 700;
+                padding-top: 7px;
+            }
+            .mail {
+                font-size: 24px;
+                line-height: 28px;
+                padding-top: 7px;
+            }
+            .others {
+                opacity: 0.45;
+                color: #2f2f2f;
+                font-size: 19px;
+                line-height: 22px;
+                border-bottom: 2px dashed #2f2f2f;
+                text-decoration: none;
+                margin-left: 31px;
+                padding-bottom: 4px;
+            }
+        }
+    }
+    .bottom-menu {
+        width: 100%;
+        padding-top: 45px;
+        nav {
+            ul {
+                list-style: none;
+                li {
+                    float: left;
+                    padding-right: 72px;
+
+                    &:last-of-type{
+                    padding-right: 0px;
+                    }
+                    a {
+                        text-decoration: none;
+                        color: #000;
+                        font-size: 22px;
+                        font-weight: 600;
+                        padding-bottom: 4px;
+                        &.active {
+                            border-bottom: 7px solid #0b8881;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+main {
+    .block1 {
+
+    padding: 50px 110px 0;
+        p {
+            font-size: 25px;
+            padding-top: 0px;
+            line-height: 30px;
+            letter-spacing: 0.003em;
+            padding-bottom: 42px;
+        }
+    }
+    .block2 {
+
+ padding-top: 35px;
+
+        .item {
+            
+              min-height: 380px;
+            position: relative;
+
+            &:nth-of-type(3n+1){padding: 0px 20px 0 50px;
+.label{
+       right: 20px;
+}
+            }
+            
+            &:nth-of-type(3n+2){padding: 0px 20px;
+
+.label{   right: 20px;}
+            }
+            &:nth-of-type(3n+3){padding: 0px 50px 0 20px;
+.label{right: 50px}
+
+            }
+
+            a:hover{border: 2px solid #649f9b;}
+            
+            img {
+            padding: 0px;
+            height: 250px;
+            float: right;
+            width: 100%;
+            }
+
+            .label {
+              display: inline-block;
+                width: 152px;
+                height: 60px;
+                position: absolute;
+             
+                top: 0;
+color: white;
+font-weight: 700;
+                
+                background-image: url(../img/label.png);
+                background-repeat: no-repeat;
+                background-size: 100%;
+                line-height: 60px;
+text-align: right;
+padding-right: 7px;
+                
+            }
+        }
+    }
+    .block3 {
+
+ padding-top: 97px;
+
+ position: relative;
+
+ &:before{
+    content:'';
+    width: 100%;
+    height:605px;
+    background-image:url(../img/top-mask.png);
+    display:inline-block;
+    position:absolute;
+    top:-25px;
+    left:0;
+    z-index:-1;
+    background-repeat:no-repeat;
+}
+
+ &:after{
+    content: '';
+    position: absolute;
+    width: 133px;
+    height: 112px;
+    bottom: 36px;
+    left: 535px;
+    background-image: url(../img/arrow.png);
+}
+
+        .advantages {
+
+padding-bottom: 200px;
+
+
+
+            &--item {
+                color: #161616;
+                font-size: 28px;
+                padding-top: 0;
+                padding: 0 30px;
+              
+            }
+            &--bold {
+                font-weight: 700;
+            }
+            &--normal {}
+        }
+    }
+    .block4 {
+
+ padding-top: 34px;
+
+        .slider {
+
+        margin: 0 auto;
+
+        width: 1000px;
+
+        margin-bottom: 50px;
+            .slide {
+                color: #161616;
+                font-size: 23px;
+                line-height: 27px;
+                width: 33.299999999999997%;
+                text-align: left;
+                img {}
+                .name {
+                    font-size: 25px;
+                    line-height: 29px;
+                    font-weight: 700;
+                }
+                .icq {
+                background-image: url(../img/icq.png);
+    background-repeat: no-repeat;
+                padding-left: 30px;
+                }
+                .skype {
+                background-image: url(../img/skype.png);
+    background-repeat: no-repeat;
+                padding-left: 30px;
+                }
+            }
+        }
+    }
+    .block5 {
+
+padding-top: 96px;
+
+position: relative;
+
+&:before{
+    content:'';
+    width: 100%;
+    height:500px;
+    background-image:url(../img/mask.png);
+    display:inline-block;
+    position:absolute;
+    top:-25px;
+    left:0;
+    z-index:-1;
+    background-repeat:no-repeat;
+}
+
+        .parents {
+            img {}
+            &--item {
+                img {}
+            }
+            p {
+                color: #161616;
+                font-size: 25px;
+            }
+        }
+    }
+    .block6 {
+
+padding-top: 60px;
+
+        .review {
+
+        padding: 0px 85px 40px;
+
+        text-align: left;
+            &--item {
+                color: #161616;
+                text-align: left;
+                padding: 0px 18px;
+            }
+            &--heading {
+                font-size: 25px;
+                font-weight: 700;
+            }
+            &--logo {}
+            &--desc {}
+            &--all {
+                opacity: 0.68;
+                color: #161616;
+                font-weight: 600;
+                text-decoration: underline;
+                margin-top: 50px;
+                display: inline-block;
+                text-align: left;
+                vertical-align: bottom;
+                padding-left: 20px;
+            }
+        }
+    }
+}
+footer {
+
+margin-top: 50px;
+
+background-color: #e4e4e4;
+
+text-align: left;
+
+padding: 26px 80px;
+
+    .search {
+        color: #676767;
+        font-style: italic;
+        margin-top: 36px;
+        padding-left: 30px;
+        background-image: url(../img/search.png);
+        background-repeat: no-repeat;
+        background-position: 0px 3px;
+        border-bottom: 2px solid #676767;
+        padding-bottom: 3px;
+        margin-bottom: 0px;
+        margin-right: 65px;
+    }
+    .copyright {
+    padding-top: 20px;
+    }
+    .footer-navigation { width: 66.6%; float: right; text-align: left;
+        nav {
+            ul { list-style: none;
+                li { float: left; 
+
+                &:nth-of-type(3n+1){padding-left: 58px;width: 38%; }
+                &:nth-of-type(3n+2){padding-left: 20px;width: 42%; }
+                &:nth-of-type(3n+3){padding-left: 13px;width: 20%; }
+                    a {
+                        font-size: 20px;
+                        color: black;
+                        line-height: 40px;
+                        padding-bottom: 0px;
+                        border-bottom: 1px solid black;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+    }
+}
