--- a/less/style.less
+++ b/less/style.less
@@ -215,6 +215,7 @@ main {
 
             a{
             display: inline-block;
+                border: 2px solid transparent;
             &:hover{
           border: 2px solid #649f9b;
 
@@ -448,7 +449,13 @@ padding: 26px 80px;
         padding-bottom: 3px;
         margin-bottom: 0px;
         margin-right: 65px;
-    }
+        background-color: transparent;
+    outline: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+    
     .copyright {
     padding-top: 20px;
     }
